syntax = "proto3";

package goserver.api.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "api/v1/common.proto";

option go_package = "api/v1";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };
    option (google.api.method_signature) = "username,password";
  }

  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/refresh"
      body: "*"
    };
    option (google.api.method_signature) = "refresh_token";
  }

  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/validate"
      body: "*"
    };
    option (google.api.method_signature) = "token";
  }

  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/logout"
      body: "*"
    };
    option (google.api.method_signature) = "token";
  }
}

message LoginRequest {
  string username = 1 [(google.api.field_behavior) = REQUIRED];
  string password = 2 [(google.api.field_behavior) = REQUIRED];
}

message LoginResponse {
  string access_token = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  string refresh_token = 2 [(google.api.field_behavior) = OUTPUT_ONLY];
  int64 access_token_expires_at = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
  User user = 4 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message RefreshTokenRequest {
  string refresh_token = 1 [(google.api.field_behavior) = REQUIRED];
}

message RefreshTokenResponse {
  string access_token = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  string refresh_token = 2 [(google.api.field_behavior) = OUTPUT_ONLY];
  int64 access_token_expires_at = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
  User user = 4 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message ValidateTokenRequest {
  string token = 1 [(google.api.field_behavior) = REQUIRED];
}

message ValidateTokenResponse {
  bool valid = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  int64 user_id = 2 [(google.api.field_behavior) = OUTPUT_ONLY];
  string username = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
  string role = 4 [(google.api.field_behavior) = OUTPUT_ONLY];
  int64 expires_at = 5 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message LogoutRequest {
  string token = 1 [(google.api.field_behavior) = REQUIRED];
}

message LogoutResponse {
  bool success = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
}
